--- a/.env
+++ b/.env
@@ -17,10 +17,10 @@ COOLDOWN_MINUTES=300
 DATABASE_PATH=data/vzoelfess.db
 
 # Redis Configuration
-REDIS_HOST=redis-14714.c83.us-east-1-2.ec2.redns.redis-cloud.com:14714
-REDIS_PORT=14714
+REDIS_HOST=
+REDIS_PORT=
 REDIS_DB=0
-REDIS_PASSWORD=masLuthfan
+REDIS_PASSWORD=
 
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/vzoelfess
