--- a/.env
+++ b/.env
@@ -17,10 +17,10 @@ COOLDOWN_MINUTES=300
 DATABASE_PATH=data/vzoelfess.db
 
 # Redis Configuration
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=redis-14714.c83.us-east-1-2.ec2.redns.redis-cloud.com
+REDIS_PORT=17124
 REDIS_DB=0
-REDIS_PASSWORD=
+REDIS_PASSWORD=masLuthfan
 
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/vzoelfess
