--- a/.env
+++ b/.env
@@ -21,6 +21,8 @@ REDIS_HOST=redis-14714.c83.us-east-1-2.ec2.redns.redis-cloud.com
 REDIS_PORT=17124
 REDIS_DB=0
 REDIS_PASSWORD=masLuthfan
+ssl=True,  # <-- INI YANG PENTING
+ssl_cert_reqs=None # Kadang ini juga perlu
 
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/vzoelfess
